tests/NormalTests/paczka1/fuzzy1/61045161.err
Error in line 6: TfsIItxo7G S222 49,3
Error in line 12: jeAU A118 336,6
Error in line 17: jeAU S564 1,5
Error in line 21: ULCL3 S713 63,9
Error in line 16: TfsIItxo7G A118 12,4
Error in line 11: qEXIUMX4Jj S222 35,6
